MDEV-4269 fix. Item_default_value inherited form Item_field so should create temporary table field similary.